test/compiler/pass/printStr.bt
string a = "hello";
print(a);
