test/compiler/fail/weird.bt
// move this to test/fail
string weird = "\";
print(weird);
